make importing truncate the goals table so the primary key resets. Fix acronym order (thing first, then acronym). Hide scores when printing lists.

--- a/app/views/goals/index.html.slim
+++ b/app/views/goals/index.html.slim
@@ -4,7 +4,7 @@
     .row.padded-row
       .col-md-12.signage
         h1.heading-xlarge What will GDS do this year?
-        p.lead These milestones have come from the latest business plans and then been iterated with the group PMOs (project management offices). Are they still right? We expect them to change during the year and need a good feedback loop to ensure they always reflect what we're doing (and have done). Please give feedback to your group PMO. #{link_to "Learn more.",about_path, :class=>'noprint'}
+        p.lead These milestones have come from the latest business plans and then been iterated with the group project management offices (PMOs). Are they still right? We expect them to change during the year and need a good feedback loop to ensure they always reflect what we're doing (and have done). Please give feedback to your group PMO. #{link_to "Learn more.",about_path, :class=>'noprint'}
         .page-break
     .row.padded-row
       .col-md-12
