--- a/app/views/shared/_sub_goals.slim
+++ b/app/views/shared/_sub_goals.slim
@@ -27,7 +27,7 @@ ol.nice_list.goals
               =pluralize(sub_goal.children.count,"Subgoal") unless sub_goal.children.empty? || params["expand_all"]
             - if(sub_goal.children.count > 0 && !params['expand_all'].nil?)
               == render partial: 'shared/sub_goals', locals: {sub_goals: sub_goal.children}
-          .col-sm-2.sub_score
+          .col-sm-2.sub_score.noprint
             h3.amount = sub_goal.display_amount
             .date = sub_goal.current_display_date
             /small = link_to 'Edit',edit_goal_path(sub_goal), {:class=>"btn-sm btn-primary"}
