--- a/app/views/welcome/dashboard.html.slim
+++ b/app/views/welcome/dashboard.html.slim
@@ -2,5 +2,6 @@ h1 Dashboard
 
 
 h2 =pluralize(User.count, "user")
+p =User.all.pluck(:name).join(", ")
 h2 =pluralize(Goal.count, "goal")
 h2 =pluralize(Score.count, "updates")
