update readme to remove obsolete basic auth stuff, change layout to be wider.

--- a/app/views/goals/index.html.slim
+++ b/app/views/goals/index.html.slim
@@ -1,56 +1,55 @@
 = render 'breadcrumb'
-.row
-  .col-md-8
-    .row.padded-row
-      .col-md-12.signage
-        h1.heading-xlarge What will GDS do this year?
-        p.lead These milestones have come from the latest business plans and then been iterated with the group project management offices (PMOs). Are they still right? We expect them to change during the year and need a good feedback loop to ensure they always reflect what we're doing (and have done). Please give feedback to your group PMO. #{link_to "Learn more.",about_path, :class=>'noprint'}
-        .page-break
-    .row.padded-row
-      .col-md-12
-        h2 Vision
-        p.lead
-          b We want to help departments work together to transform government to meet user needs.
-        /Previously
-        /Government is transformed by GDS supporting departments to deliver end to end services that are designed and built around user needs.
-    .row.padded-row
-      .col-md-12
-        h2 To achieve this vision we will
-        ol.nice_list
-          li
-            .point
-              h3 Provide standards, policy, support, and guidance so that services and technology work effectively and consistently for the public and government.
-          li
-            .point
-              h3 Create, run and continuously improve the platforms and tools that make it simple for government to build, iterate and retire services.
-          li
-            .point
-              h3 Lead the digital, data and technology function so that government has the skills and capability it needs to transform itself.
-          li
-            .point
-              h3 Build and leverage a diverse and inclusive workforce and workplace in GDS, and across the function, so that GDS and the technology function are seen as great examples within the sector.
-
+.row.padded-row
+  .col-md-12.signage
+    h1.heading-xlarge What will GDS do this year?
+    p.lead These milestones have come from the latest business plans and then been iterated with the group project management offices (PMOs). Are they still right? We expect them to change during the year and need a good feedback loop to ensure they always reflect what we're doing (and have done). Please give feedback to your group PMO. #{link_to "Learn more.",about_path, :class=>'noprint'}
     .page-break
+.row.padded-row
+  .col-md-8
+    h2 Vision
+    p.lead
+      b We want to help departments work together to transform government to meet user needs.
+    /Previously
+    /Government is transformed by GDS supporting departments to deliver end to end services that are designed and built around user needs.
+.row.padded-row
+  .col-md-8
+    h2 To achieve this vision we will
+    ol.nice_list
+      li
+        .point
+          h3 Provide standards, policy, support, and guidance so that services and technology work effectively and consistently for the public and government.
+      li
+        .point
+          h3 Create, run and continuously improve the platforms and tools that make it simple for government to build, iterate and retire services.
+      li
+        .point
+          h3 Lead the digital, data and technology function so that government has the skills and capability it needs to transform itself.
+      li
+        .point
+          h3 Build and leverage a diverse and inclusive workforce and workplace in GDS, and across the function, so that GDS and the technology function are seen as great examples within the sector.
 
-    .row.padded-row
-      .col-sm-12
-        h2 Goals by Business Group
-        .noprint.expand_collapse
-          = (params["expand_all"]) ? link_to("Collapse all", goals_path) : link_to("Expand all", "?expand_all=1")
-    .row.padded-row
-      .col-sm-12
-        - Group.all.each do |group|
-          .well.group_well
-            .print_only
-              small =display_date(Time.now)
-            h2 =link_to group.name + " Group", group
-            h4 Budget: £#{(group.budget.to_f/1000000).round(1)}m
-            h4 Headcount: #{group.headcount}
-          == render partial: 'shared/sub_goals', locals: {sub_goals: group.top_level_goals}
-          .page-break
+.page-break
 
-    - if is_admin? # && current_user.name.match(/kappus|test/i)
-      = form_tag import_okrs_goals_path, multipart: true, class: "form-inline noprint" do
-        .form-group
-          =file_field_tag :file, :class=>"form-control"
-        =submit_tag "Import", :class=>"btn btn-primary"
+.column-two-thrids
+  .row.padded-row
+    .col-sm-12
+      h2 Goals by Business Group
+      .noprint.expand_collapse
+        = (params["expand_all"]) ? link_to("Collapse all", goals_path) : link_to("Expand all", "?expand_all=1")
+  .row.padded-row
+    .col-sm-12
+      - Group.all.each do |group|
+        .well.group_well
+          .print_only
+            small =display_date(Time.now)
+          h2 =link_to group.name + " Group", group
+          h4 Budget: £#{(group.budget.to_f/1000000).round(1)}m
+          h4 Headcount: #{group.headcount}
+        == render partial: 'shared/sub_goals', locals: {sub_goals: group.top_level_goals}
+        .page-break
+
+  - if is_admin? # && current_user.name.match(/kappus|test/i)
+    = form_tag import_okrs_goals_path, multipart: true, class: "form-inline noprint" do
+      .form-group
+        =file_field_tag :file, :class=>"form-control"
+      =submit_tag "Import", :class=>"btn btn-primary"
