--- a/app/views/welcome/dashboard.html.slim
+++ b/app/views/welcome/dashboard.html.slim
@@ -1,6 +1,25 @@
 h1 Dashboard
 
 
+
+.row
+  .col-sm-1 style="background: #fc0"
+    b 1.2.3
+  .col-sm-10 style="background: #efe"
+    p.lead This is some text.
+  .col-sm-1 style="background: #aaf"
+    p 23%
+.row
+  .col-sm-1
+  .col-sm-1 style="background: #fc0"
+    b 1.2.3
+  .col-sm-9 style="background: #efe"
+    p.lead This is some text.
+  .col-sm-1 style="background: #aaf"
+    p 23%
+
+
+
 h2 =pluralize(User.count, "user")
 p =User.all.pluck(:name).join(", ")
 h2 =pluralize(Goal.count, "goal")
