--- a/app/views/goals/index.html.slim
+++ b/app/views/goals/index.html.slim
@@ -34,7 +34,7 @@
   .row.padded-row
     .col-sm-12
       h2 Goals by Business Group
-      .pull-right
+      .pull-right.noprint
         = link_to "Download CSV", goals_path(:format=>:csv)
       .noprint.expand_collapse
         = (params["expand_all"]) ? link_to("Collapse all", goals_path) : link_to("Expand all", "?expand_all=1")
