added score_amount to goal model to store current score, crated update_score method and call after saving a score to recursively update parent scores. Should improve performance.

--- a/app/views/goals/index.html.slim
+++ b/app/views/goals/index.html.slim
@@ -47,6 +47,9 @@
           h2 =link_to group.name + " Group", group
           h4 Budget: £#{group.budget_in_millions}m
           h4 Headcount: #{group.headcount}
+        -if (is_admin?)
+          .noprint
+            =link_to "New Goal",new_goal_path, {class: "btn btn-sm btn-success"}
         == render partial: 'shared/sub_goals', locals: {sub_goals: group.top_level_goals}
         .page-break
 
