fix to CSV export, redirect to parent goal when creating a sub-goal, hack in a few more admin names.

--- a/app/views/goals/index.html.slim
+++ b/app/views/goals/index.html.slim
@@ -34,8 +34,9 @@
   .row.padded-row
     .col-sm-12
       h2 Goals by Business Group
-      .pull-right.noprint
-        = link_to "Download CSV", goals_path(:format=>:csv)
+      -if is_admin?
+        .pull-right.noprint
+          = link_to "Download CSV", goals_path(:format=>:csv)
       .noprint.expand_collapse
         = (params["expand_all"]) ? link_to("Collapse all", goals_path) : link_to("Expand all", "?expand_all=1")
   .row.padded-row
