--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -23,6 +23,8 @@
             li =link_to "Groups and Teams", groups_path
             /li =link_to "Teams", teams_path
             li =link_to "About", about_path
+            -if is_admin?
+              li =link_to "Manage users", users_path
 - content_for :body_end
   javascript:
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -60,6 +62,6 @@
           - if signed_in?
               i Signed in as #{current_user.name}
               br
-              =link_to :Logout, logout_path
+              =link_to 'Sign out', signout_path
         .clear
 = render template: "layouts/govuk_template"
