--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -25,6 +25,7 @@
             li =link_to "About", about_path
             -if is_admin?
               li =link_to "Manage users", users_path
+            li =link_to 'Sign out', signout_path
 - content_for :body_end
   javascript:
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
