--- a/app/views/goals/show.html.slim
+++ b/app/views/goals/show.html.slim
@@ -9,7 +9,7 @@
     /h5 =quarter_year(@goal.earliest_start_date) + " - " + quarter_year(@goal.latest_end_date)
     h5 =@goal.display_date_range
     h2 = @goal.name
-    -if is_admin?
+    -if can_modify? @goal
       .goal_controls
         = link_to :Edit, edit_goal_path, class: "btn-primary btn-sm"
         = link_to "Create sub-goal",new_goal_path(parent_id:@goal), class: "btn-success btn-sm"
@@ -44,8 +44,8 @@
   .row
     .col-sm-9
       h2 Progress Updates
-      - if is_admin?
-        =link_to "Report Progress", new_goal_score_path(@goal), :class=>"btn-sm btn-success"
+      - if can_modify? @goal
+        =link_to "Report progress", new_goal_score_path(@goal), :class=>"btn-sm btn-success"
   - if(@goal.scores.empty?)
       br
       p.lead Updates will show progress against a goal by providing a history of the scores and supporting narratives at diffrent points in time. They should be added monthly or whenever there is new delivery information to report.
