--- a/app/views/goals/show.html.slim
+++ b/app/views/goals/show.html.slim
@@ -2,13 +2,16 @@
 
 .row
   .col-sm-9
-    - if (@goal.group)
-      h4 =link_to @goal.group.name, @goal.group
+    h2 = @goal.name
     - if (@goal.get_team)
-      h5 =link_to @goal.get_team.name, @goal.get_team
+      h6 =link_to @goal.get_team.name, @goal.get_team
+    - if (@goal.owner.present?)
+      h4.owner =@goal.owner.name
+    - if (@goal.group)
+      h5 =link_to @goal.group.name + " Group", @goal.group
     /h5 =quarter_year(@goal.earliest_start_date) + " - " + quarter_year(@goal.latest_end_date)
     h5 =@goal.display_date_range
-    h2 = @goal.name
+
     -if can_modify? @goal
       .goal_controls
         = link_to :Edit, edit_goal_path, class: "btn-primary btn-sm"
