--- a/app/views/goals/index.html.slim
+++ b/app/views/goals/index.html.slim
@@ -54,7 +54,8 @@
         == render partial: 'shared/sub_goals', locals: {sub_goals: group.top_level_goals}
         .page-break
 
-  - if is_admin?
+  / Now that we have real data and cannot yet import scores, we need to disable goal importing unless we have zero goals.
+  - if Goal.all.count == 0 && is_admin?
     = form_tag import_okrs_goals_path, multipart: true, class: "form-inline noprint" do
       .form-group
         =file_field_tag :file, :class=>"form-control"
