--- a/app/views/users/index.html.slim
+++ b/app/views/users/index.html.slim
@@ -23,6 +23,6 @@
           td
             = form_for(user, html: { class: "form-horizontal", role: "form" }) do |f|
               / disable if current user (e.g. don't let yourself make yourself a non-admin
-              = f.check_box :admin, class: "form-control", id: user.id, onclick: "submit()", disabled: current_user == user
+              = f.check_box :admin, class: "form-control", id: "user#{user.id}", onclick: "submit()", disabled: current_user == user
               = f.hidden_field :page, value: params[:page]
 = paginate @users
