allow cabinetoffice.gov.uk addresses to login, add some tests, allow assignment/ownership of goals (and tests)

--- a/app/views/goals/_form.html.slim
+++ b/app/views/goals/_form.html.slim
@@ -62,7 +62,7 @@ javascript:
         =collection_select :goal, :parent_id, Goal.all, :id, :name, {prompt:true, include_blank:true}, {class: :selectpicker}
   .form-group
     .col-sm-offset-2.col-sm-10
-      = f.submit class: "btn btn-primary"
+      = f.submit class: "button"
       | &nbsp;
       br
       br
