--- a/app/views/goals/show.html.slim
+++ b/app/views/goals/show.html.slim
@@ -2,25 +2,25 @@
 
 .row
   .col-sm-9
-    h2 = @goal.name
+    h1 = @goal.name
     - if (@goal.get_team)
-      h6 =link_to @goal.get_team.name, @goal.get_team
+      .goal-meta =link_to @goal.get_team.name, @goal.get_team
     - if (@goal.owner.present?)
-      h4.owner =@goal.owner.name
+      .goal-meta.owner =@goal.owner.name
     - if (@goal.group)
-      h5 =link_to @goal.group.name + " Group", @goal.group
+      .goal-meta =link_to @goal.group.name + " Group", @goal.group
     /h5 =quarter_year(@goal.earliest_start_date) + " - " + quarter_year(@goal.latest_end_date)
-    h5 =@goal.display_date_range
+    .goal-meta =@goal.display_date_range
 
     -if can_modify? @goal
       .goal_controls
-        = link_to :Edit, edit_goal_path, class: "btn-primary btn-sm"
-        = link_to "Create sub-goal",new_goal_path(parent_id:@goal), class: "btn-success btn-sm"
+        = link_to "Edit goal", edit_goal_path, class: "button btn-primary btn-sm"
+        = link_to "Create sub-goal",new_goal_path(parent_id:@goal), class: "button"
         .pull-right
           - if(!@goal.children.empty?)
-            small This goal cannot be deleted because it has sub-goals.
+            .pull-right.hint This goal cannot be deleted because it has sub-goals.
           -else
-            = link_to 'Remove', @goal, method: :delete, data: { confirm: 'Are you sure? This will also delete any updates (scores) applied to this goal. This cannot be undone.' }, class: "btn-sm btn-danger"
+            = link_to 'Remove', @goal, method: :delete, data: { confirm: 'Are you sure? This will also delete any updates (scores) applied to this goal. This cannot be undone.' }, class: "button danger"
   .col-sm-3
     .big_score
       .smaller Current delivery:
@@ -30,7 +30,7 @@
   .col-sm-12
     /h4 #{pluralize(sub_goals.count,"Child goal")}
     - unless @goal.children.empty?
-      h3 Sub Goals
+      h2 Sub Goals
       - if @goal.children.count > 5
         .alert.alert-warning.alert-dismissable
           strong> NOTE:
@@ -49,7 +49,7 @@
       h2 Progress Updates
 
       - if can_modify? @goal
-        =link_to "Report progress", new_goal_score_path(@goal), :class=>"btn-sm btn-success"
+        =link_to "Report progress", new_goal_score_path(@goal), :class=>"button"
   - if(@goal.scores.empty?)
       br
       p.lead No updates yet.
